# library-fastapi

./: pyproject.toml
src/: main.py
src/handlers/: create_book_handler.py
src/models/: Book.py  Library.py
src/routes/: router.py
src/schemas/: schema.py
