[tool.poetry]
name = "library-fastapi"
version = "0.1.0"
description = ""
authors = ["williandeitosi <williandeitosi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.31.1"
fastapi = {extras = ["standard"], version = "^0.115.2"}

[tool.taskipy.tasks]
dev="fastapi dev src/main.py"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
